--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
+    "@tanstack/react-query": "^5.68.0",
     "axios": "^1.8.2",
     "classnames": "^2.5.1",
     "eslint-config-next": "^15.2.1",
