--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-loader-spinner": "^6.1.6",
+    "react-spinners": "^0.15.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
